force-app/main/default/objects/LLM_Config__mdt/fields/Auto_Apply_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Auto_Apply_Threshold__c</fullName>
    <label>Auto Apply Threshold</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>