force-app/main/default/objects/LLM_Config__mdt/fields/Factor_Set_Weight__c.field-meta.xml
<CustomField>
    <fullName>Factor_Set_Weight__c</fullName>
    <label>Factor Set Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>