force-app/main/default/objects/LLM_Config__mdt/fields/LLM_Score_Medium__c.field-meta.xml
<CustomField>
    <fullName>LLM_Score_Medium__c</fullName>
    <label>LLM Score Medium</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>