force-app/main/default/objects/LLM_Config__mdt/fields/LLM_Weight__c.field-meta.xml
<CustomField>
    <fullName>LLM_Weight__c</fullName>
    <label>LLM Confidence Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>