force-app/main/default/objects/LLM_Config__mdt/fields/Match_Count_Weight__c.field-meta.xml
<CustomField>
    <fullName>Match_Count_Weight__c</fullName>
    <label>Match Count Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>