force-app/main/default/objects/LLM_Config__mdt/fields/Prompt_Invocation_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Invocation_Application_Name__c</fullName>
    <label>Prompt Invocation Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>