force-app/main/default/objects/LLM_Config__mdt/fields/Prompt_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template_API_Name__c</fullName>
    <label>Prompt Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>